# Altruism-Project

./: .gitignore  Activity Diagram.drawio  Class Diagram.drawio  README.md  Sequence Diagram.drawio  backend.log.err  final_review.py  format_doc.py  gen_arch_diagram.py  index.html  package-lock.json  package.json  reorder_doc.py  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
backend/: package-lock.json  package.json  seed.js  server.js
backend-python/: .env.example  add_rejected.py  auth.py  check_demo.py  check_demo2.py  check_redcrescent.py  check_schema.py  database.py  fix_demo.py  fix_org_location.py  fix_sequences.py  main.py  pyproject.toml  requirements.txt  seed.py  seed_faker.py  seed_red_crescent.py  test_create.py
backend-python/migrations/: 001_initial_schema.sql  002_schema_improvements.sql  003_supervisor_redesign.sql  004_event_ux_improvements.sql  005_remove_invite_token.sql  006_schema_refactor.sql  007_clean_schema.sql
backend-python/models/: altruism.db
backend-python/routes/: activities.py  admin.py  announcements.py  audit.py  auth_routes.py  certificates.py  event_applications.py  event_ratings.py  events.py  lifecycle.py  notifications.py  organizations.py  reports.py  supervisors.py  volunteers.py
backend-python/tests/: conftest.py  test_activities.py  test_auth.py  test_organizations.py
backend/middleware/: auth.js
backend/models/: db.js
backend/routes/: activities.js  auth.js  certificates.js  events.js  organizations.js  reports.js  (+2 more)
tests/: test_db_access_policy.py  volunteer_test.py
(+68 files in other folders)
