[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi==0.115.6",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.13.0",
    "python-jose[cryptography]==3.3.0",
    "uvicorn[standard]==0.34.0",
]
